--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body {
     line-height: 1.5;
     padding: 1em 1em;
     margin: 0 auto;
-    max-width: 57em;
-    margin-right: 250px;
+    max-width: 60%;
 }
 
 
@@ -16,28 +15,28 @@ h1 {
     text-align: left;
     color: #333;
     font-size: 2em;
-    margin-top: 130px;
+    margin-top: 3em;
     font-weight: normal;
 }
 
 h2 {
     text-align: left;
-    margin-top: 1em;
     padding-top: 1em;
     color: #333;
     font-weight: normal;
     font-size: 1.25em;
-    margin-top: -30px;
+    margin-top: -1.5em;
 }
 
 .top-buttons {
-    position: absolute;
-    top: 20px;
-    right: 50px;
+    display: flex;
+    gap: 1em;
+    margin-right: -15.75em;
+
 }
 
 .top-buttons button {
-    margin-left: 30px;
+    margin-left: 1em;
     padding: 0;
     border: none;
     background: none;
@@ -61,19 +60,19 @@ h2 {
 
 img {
     float: left;
-    margin-top: 196px; /* 140 for aligning with h1 */
-    margin-right: 70px;
-    margin-left: -80px;
+    margin-top: 10.2em;
+    margin-right: 4em;
+    margin-left: -3em;
 }
 
 .header {
-    position: absolute;
-    top: 20px;
-    left: 50px;
+    display: flex;
+    margin-left: -17.5em;
+    gap: 1em;
 }
 
 .header button {
-    margin-left: 30px;
+    margin-left: 1.25em;
     padding: 0;
     border: none;
     background: none;
@@ -82,4 +81,12 @@ img {
     color: #333;
     cursor: pointer;
     font-weight: bold;
+    white-space: nowrap;
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
 }
