--- a/style.css
+++ b/style.css
@@ -83,17 +83,19 @@ h2 {
 .project-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: flex-start;
     margin: 0 auto;
     width: 80%;
 }
 
 .project {
+    box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin: 20px;
     width: calc(50% - 40px);
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 100% rgba(0,0,0,0.1);
     transition: box-shadow 0.3s ease-in-out;
 }
 
@@ -107,5 +109,5 @@ h2 {
 }
 
 .project-description {
-    padding: 20px;
+    padding: 10%;
 }
