--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     line-height: 1.5;
     padding: 1em;
     margin: 0 auto;
-    width: 90%; /* use percentage to make it responsive */
+    width: 90%;
 }
 
 h1 {
@@ -21,14 +21,14 @@ h2 {
     color: #333;
     font-weight: normal;
     font-size: 1.25em;
-    margin-top: 1em; /* reduced this to avoid unnecessary space */
+    margin-top: 1em;
 }
 
 .nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap; /* this allows the content to move to next line when the viewport size decreases */
+    flex-wrap: wrap;
 }
 
 .top-buttons,
@@ -53,7 +53,7 @@ h2 {
 }
 
 .header button {
-    font-weight: bold;
+    font-weight: normal;
     white-space: nowrap;
 }
 
@@ -76,38 +76,48 @@ h2 {
     display: flex;
     width: 226px;
     height: 204px;
-    /* margin-right: 25%; */
-    float: right;
 }
 
 .project-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
+    margin-top: 2.5em;
 }
 
 .project {
     box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 20px;
-    width: calc(50% - 40px);
+    border: 2px solid #ccc;
+    border-radius: 25px;
+    margin: 2%;
+    width: 475px;
+    /* min-width: 350px; */
     box-shadow: 0 0 100% rgba(0,0,0,0.1);
-    transition: box-shadow 0.3s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out;
 }
 
 .project:hover {
-    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    box-shadow: 0 0 30px rgba(0,0,0,0.2);
 }
 
 .project img {
-    width: 100%;
-    height: auto;
+    display: block;
+    margin: auto;
+    margin-top: 8%;
+    margin-bottom: auto;
 }
 
 .project-description {
     padding: 10%;
+}
+
+h3 {
+    text-align: left;
+    color: #333;
+    font-weight: normal;
+    font-size: 1.25em;
+    margin-top: 0em;
 }
