--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h2 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin-top: 2.5em;
+    margin-top: 8%;
 }
 
 .text-content {
@@ -85,7 +85,7 @@ h2 {
     align-items: flex-start;
     margin: 0 auto;
     width: 90%;
-    margin-top: 2.5em;
+    margin-top: 8%;
 }
 
 .project {
